practiced scroll bar, hidden, overflow, nowrap etc

--- a/more-html-css-practice/index.html
+++ b/more-html-css-practice/index.html
@@ -24,6 +24,7 @@
         </div>
         <div class="image">
             <img src="images/Anha.jpg" alt="">
+            <img src="images/water.png" alt="">
         </div>
     
       </div>
